@@ -211,6 +211,7 @@ constexpr int CLOSE_FILE_INTERVAL = 0;
 		SET(dht_prefer_verified_node_ids, true, &session_impl::update_dht_settings),
 		SET(piece_extent_affinity, false, nullptr),
 		SET(validate_https_trackers, false, &session_impl::update_validate_https),
+		SET(tracker_ssrf_mitigation, true, nullptr),
 	}});
 
 	aux::array<int_setting_entry_t, settings_pack::num_int_settings> const int_settings
